// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LayoutRow> DOM element renders correctly  with a custom backgroundColor 1`] = `
<div>
  <div
    className="htz-a htz-b"
  >
    Customizing backgroundColor
  </div>
</div>
`;

exports[`<LayoutRow> DOM element renders correctly  with a custom backgroundColor 2`] = `".htz-a{background-color:green}.htz-b{width:100%}"`;

exports[`<LayoutRow> DOM element renders correctly  with custom miscStyles 1`] = `
<div>
  <div
    className="htz-a htz-b htz-c"
  >
    Customizing miscStyles
  </div>
</div>
`;

exports[`<LayoutRow> DOM element renders correctly  with custom miscStyles 2`] = `".htz-a{background-color:#EBF2F5}.htz-b{width:100%}.htz-c{padding-top:5rem}"`;

exports[`<LayoutRow> DOM element renders correctly with custom attrs 1`] = `
<div>
  <div
    ariaLabel="I am custom"
    className="htz-a htz-b"
  >
    Customizing attrs
  </div>
</div>
`;

exports[`<LayoutRow> DOM element renders correctly with custom attrs 2`] = `".htz-a{background-color:#EBF2F5}.htz-b{width:100%}"`;

exports[`<LayoutRow> DOM element renders correctly with minimal required props 1`] = `
<div>
  <div
    className="htz-a htz-b"
  >
    Hello LayoutRow
  </div>
</div>
`;

exports[`<LayoutRow> DOM element renders correctly with minimal required props 2`] = `".htz-a{background-color:#EBF2F5}.htz-b{width:100%}"`;
